--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <a href="index1.html"></a>
-    <a href="index2.html"></a>
+    <a href="index1.html">1</a>
+    <a href="index2.html">2</a>
 </body>
 </html>
